<resources>
    <string name="app_name">GPSGame</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>

    <!-- Strings related to profile -->
    <string name="score">Score: </string>
    <string name="time">Time: </string>
    <string name="city">City: </string>
    <string name="latitude">Latitude: </string>  <!--szer-->
    <string name="longitude">Longitude: </string> <!-- dlug -->

    <!-- Strings related to profile -->
    <string name="menu_logout">Logout</string>
    <string name="menu_addMark">Add Mark</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_maps">Map</string>
    <string name="menu_profile">My Profile</string>
    <string name="menu_my_events">My Events</string>
    <string name="action_settings">Edit Profile</string>
    <string name="title_activity_navigation">NavigationActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="MapView">Map view</string>
    <string name="listView">List View</string>


    <!-- Firestore Strings -->
    <string name="collection_users">users</string>
    <string name="collection_events">events</string>
    <string name="collection_markers">markers</string>


    <!--    Permissions    -->
    <string name="permission_rationale_location">Access to the location service is required to demonstrate the \'my location\' feature, which shows your current location on the map.</string>
    <string name="location_permission_denied">This sample requires location permission to enable the \'my location\' layer. Please try again and grant access to use the location.\nIf the permission has been permanently denied, it can be enabled from the System Settings &gt; Apps &gt; \'Google Maps API Demos\'.</string>
    <string name="permission_required_toast">Location permission is required for this demo.</string>

    <!-- Other-->
    <string name="difficulty">Difficulty</string>
    <string name="registerDate">Registration Date:</string>
    <string name="TapHintProfileImage">Tap on icon to choose profile picture</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="title_activity_create_event">CreateEventActivity</string>

    <!--    Navigation    -->
    <string name="title_step1">Step 1</string>
    <string name="title_step2">Step 2</string>
    <string name="title_step3">Step 3</string>
    <string name="title_step4">Step 4</string>
    <string name="createEvent_location">Location</string>

    <!--    Event picker     -->
    <string name="createEvent_qrCode">QR Code</string>
    <string name="navigation_photoCompare">Photo Compare</string>
    <string name="navigation_quiz">Quiz</string>
    <string name="add_questions">Please, Add questions and answers</string>

    <!--    Event Quiz    -->
    <string name="add_question">Enter a Question</string>
    <string name="add_answers">Enter an answer</string>
    <string name="answerHint">Only one should be correct</string>
    <string name="submitQuiz">Submit Quiz</string>
    <string name="add_answer">Add Answer</string>
    <string name="Send_QR">Send to Email</string>

    <!--    Event QRcode    -->
    <string name="downloadQR">Download QR code</string>
    <string name="markPleaceToFind">Pleace mark pleace to find</string>
    <string name="eventLocalization">Enter Event Localization on Map</string>
    <string name="add_hint">Enter a Hint</string>

    <!--    Event Hints    -->
    <string name="add_hint_butt">Add Hint</string>
    <string name="submitHints">Submit Hints</string>
    <string name="markerLocalization">Enter Marker Localization on Map</string>

    <string name="submitInfo">Submit</string>
    <string name="submitQuestion">Submit Question</string>


    <string name="generate">Generate QRcode</string>
    <string name="QRmessage">QR code message</string>
    <string name="menu_messages">Messages</string>
    <string name="ac_login">Login</string>


    <!--Fragment and Activity names-->
    <string name="ac_register">Register</string>
    <string name="ac_user_location">User Location</string>
    <string name="ac_start_game">Start Game</string>
    <string name="fr_hints">Add Hints</string>
    <string name="fr_add_pleace">Pleace to find</string>
    <string name="fr_add_marker">Add Marker Location</string>
    <string name="fr_add_photo_compare">Photo Compare</string>
    <string name="fr_add_Qr">QR code</string>
    <string name="fr_add_quiz">Quiz</string>
    <string name="fr_event_details">Event Details</string>
    <string name="fr_start_location">Find Hidden Location</string>
    <string name="fr_start_QR">Find Hidden QR code</string>
    <string name="fr_start_quiz">Solve Quiz</string>
    <string name="fr_start_photo">Find This Object</string>
    <string name="fr_start_summary">Game Summary</string>
    <string name="fr_messages">Messages</string>
    <string name="fr_profile">User Profile</string>
    <string name="ac_admin">Admin Dashboard</string>
    <string name="fr_navigation_maps">Map</string>
    <string name="fr_add_basicInfo">Event Basic Info</string>
    <string name="timerBundleGame">timerBundleGame</string>

    <!--Bundle-->
    <string name="answersBundleGame">answersBundleGame</string>
    <string name="eventBundle">eventBundle</string>
    <string name="markerBundle">markerBundle</string>
    <string name="markerBundleGame">markerBundleGame</string>
    <string name="emailBundle">emailBundle</string>
    <string name="congratulations">Congratulations!</string>

    <!--Messages-->
    <string name="finished">You have finished event:</string>
    <string name="statistics">Your score:</string>
    <string name="comAndRate">Pleace comment and rate event</string>
    <string name="GPSGAME">GPS Game</string>
    <string name="welcome">Welcome in</string>
    <string name="messageTimer">Game will start in</string>
    <string name="showHints">Show Hints</string>
    <string name="eventView">Game View</string>
    <string name="changeView">Change View</string>
    <string name="listsizeBundleGame">listsizeBundleGame</string>
    <string-array name="Types">
        <item>Choose</item>
        <item>Location</item>
        <item>QRcode</item>
        <item>Quiz</item>
        <item>PhotoCompare</item>
    </string-array>


</resources>
