<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/ic_account_box_black_24dp"
            android:title="@string/menu_profile"></item>

        <item
            android:id="@+id/nav_maps"
            android:icon="@drawable/ic_map_black_24dp"
            android:title="@string/menu_maps"></item>

        <item
            android:id="@+id/nav_addMark"
            android:icon="@drawable/ic_add_location_black_24dp"
            android:title="@string/menu_addMark"></item>

        <item
            android:id="@+id/nav_messages"
            android:icon="@drawable/ic_message_black_24dp"
            android:title="@string/menu_messages"></item>

        <item
            android:id="@+id/nav_my_events"
            android:icon="@drawable/ic_folder_special_black_24dp"
            android:title="@string/menu_my_events"></item>


        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/ic_send_black_24dp"
            android:title="@string/menu_logout"></item>

    </group>
    >

</menu>