<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <item
        android:id="@+id/action_showHints"
        android:orderInCategory="100"
        android:title="@string/showHints"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_ChangeView"
        android:orderInCategory="100"
        android:title="@string/changeView"
        app:showAsAction="never">

        <menu>

            <item
                android:id="@+id/action_MapView"
                android:orderInCategory="100"
                android:title="@string/MapView" />

            <item
                android:id="@+id/action_eventView"
                android:orderInCategory="100"
                android:title="@string/eventView" />
        </menu>
    </item>


</menu>