<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_step1"
        android:orderInCategory="0"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_step1" />

    <item
        android:id="@+id/navigation_step2"
        android:icon="@drawable/ic_dashboard_black_24dp"
        android:orderInCategory="1"
        android:enabled="false"
        android:title="@string/title_step2"/>

    <item
        android:id="@+id/navigation_step3"
        android:icon="@drawable/ic_notifications_black_24dp"
        android:orderInCategory="2"
        android:enabled="false"
        android:title="@string/title_step3" />

    <item
        android:id="@+id/navigation_step4"
        android:orderInCategory="3"
        android:icon="@drawable/ic_add_location_black_24dp"
        android:enabled="false"
        android:title="@string/title_step4" />

</menu>
