<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragment.eventCreation.CreateEventQRcode">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imageViewphoto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:src="@tools:sample/avatars" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:orientation="horizontal">

            <Button
                android:id="@+id/sendEmailQR"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Send_QR"
                />

            <Button
                android:id="@+id/downloadQR"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/downloadQR"
               />
        </LinearLayout>
        <Button
            android:id="@+id/submitQR"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/submitInfo" />
    </LinearLayout>
</FrameLayout>