<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragment.eventCreation.CreateEventQuiz">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/_20dp"
            android:textStyle="bold"
            android:layout_marginTop="@dimen/_10dp"
            android:text="@string/add_questions"
            android:textAlignment="center" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/_10dp"
            android:layout_marginRight="@dimen/_10dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/_18dp"
                android:textStyle="bold"
                android:layout_marginTop="@dimen/_10dp"
                android:text="@string/add_question"
                android:textAlignment="center" />

            <EditText
                android:id="@+id/editTextQuestion"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif"
                android:hint="Question"
                android:textColorHint="@color/colorPrimary" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/_18dp"
                android:textStyle="bold"
                android:text="@string/add_answers"
                android:textAlignment="center" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/_10dp"
                android:layout_marginRight="@dimen/_10dp"
                android:gravity="center"
                android:weightSum="3"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/editTextAnswer"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:fontFamily="sans-serif"
                    android:hint="Select if answer is correct"
                    android:paddingBottom="15dp"
                    android:textColorHint="@color/colorPrimary" />

                <RadioButton
                    android:id="@+id/radioBtnAnswer"
                    android:layout_weight="1"
                    android:buttonTint="@color/colorPrimaryDark"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="15dp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10dp"
                android:orientation="horizontal"
                android:gravity="center">

                <Button
                    android:id="@+id/buttonAddAnswer"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:padding="@dimen/_5dp"
                    android:layout_marginEnd="@dimen/_18dp"
                    android:text="@string/add_answer" />

                <Button
                    android:id="@+id/submitQuestion"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/_5dp"
                    android:layout_gravity="center"
                    android:text="@string/submitQuestion" />

            </LinearLayout>

            <Button
                android:id="@+id/submitQuiz"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/_10dp"
                android:padding="@dimen/_5dp"
                android:text="@string/submitQuiz" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_marginLeft="@dimen/_10dp"
            android:layout_marginRight="@dimen/_10dp"
            android:layout_marginTop="@dimen/_10dp"
            android:gravity="center_horizontal">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerAnswers"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:nestedScrollingEnabled="true"
                android:scrollbars="vertical" />

        </LinearLayout>
    </LinearLayout>

</FrameLayout>