<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:tools="http://schemas.android.com/tools"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             tools:context=".fragment.eventCreation.CreateEventQuiz">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="@dimen/_10dp"
        android:layout_marginRight="@dimen/_10dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:textSize="@dimen/_20dp"
                android:layout_marginTop="@dimen/_10dp"
                android:text="@string/add_hint"
                android:textAlignment="center"/>

            <EditText
                android:id="@+id/editTextHint"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10dp"
                android:fontFamily="sans-serif"
                android:hint="Hint"
                android:paddingBottom="15dp"
              />
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:layout_gravity="center"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/buttonAddHint"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:layout_marginRight="@dimen/_75dp"
                    android:layout_weight="1"
                    android:text="@string/add_hint_butt" />

            <Button
                android:id="@+id/submitHints"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:padding="@dimen/_10dp"
                android:layout_gravity="center"
                android:text="@string/submitHints"/>
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="@dimen/_10dp"
            android:layout_marginBottom="@dimen/_10dp"
            android:layout_gravity="bottom">

            <ListView
                android:id="@+id/hintList"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="2">
            </ListView>
        </LinearLayout>

    </LinearLayout>

</FrameLayout>