<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Fragment.EventCreation.CreateEventLocation">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/markPleaceToFind"
                    android:textAlignment="center" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">


                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:orientation="vertical">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="vertical"
                            >

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="@string/latitude" />

                            <EditText
                                android:id="@+id/EventLocLatitude"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"

                                android:inputType="numberDecimal"
                                android:paddingBottom="15dp"
                                android:textColorHint="@color/colorAccent" />
                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="vertical">

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="@string/longitude" />

                            <EditText
                                android:id="@+id/EventLocLongitude"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:inputType="numberDecimal"
                                android:paddingBottom="15dp"
                                android:textColorHint="@color/colorAccent" />

                        </LinearLayout>
                    </LinearLayout>

                    <ImageButton
                        android:id="@+id/imageButton"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_marginBottom="8dp"
                        android:src="@drawable/ic_my_location_black_24dp" />

                </LinearLayout>
            </LinearLayout>

            <RelativeLayout
                android:id="@+id/map_container"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="50">

                <com.google.android.gms.maps.MapView
                    android:id="@+id/eventMap"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" />

                <ImageButton
                    android:id="@+id/fullScreenMapEvent"
                    android:layout_width="35dp"
                    android:layout_height="35dp"
                    android:layout_alignParentEnd="true"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="10dp"
                    android:src="@drawable/ic_fullscreen_black_24dp" />

            </RelativeLayout>

            <Button
                android:id="@+id/submitLoc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/submitInfo" />
        </LinearLayout>

    </RelativeLayout>

</FrameLayout>